[package]
name = "crius"
version = "0.1.0"
authors = ["Angelos Gkountis <angelos.gkountis@gmail.com>"]
edition = "2018"


[dependencies]
serde = { version = "^1.0.0", features = ["derive"] }
serde_yaml = "^0.8.0"
winit = { version = "^0.22.0", features = ["serde"] }
legion = "^0.2.0"
nalgebra = "^0.19.0"
